# An-Open-Source-Data-Acquisition-Software

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SerialComm.cpp  SerialComm.h  behavior_SerialComm.txt  main.cpp
Main_Project/: CMakeLists.txt  Doxyfile  daq_database.db  ericka_collect_continuous.csv  helklo_collect_continuous.csv  helklo_collect_now.csv  hello.csv  hello_collect_continuous.csv  hello_collect_now.csv  sensors.db  testingg.csv  testingg.txt  testingggg.csv  whatever.txt
Main_Project/doxygen_docs/html/: AddSensorDialog_8h_source.html  App_8h_source.html  CalibrateSensorDialog_8h_source.html  CalibrationPoint_8h_source.html  CalibrationTableDialog_8h_source.html  Calibrator_8h_source.html  DataCollector_8h_source.html  DataSession_8h_source.html  DataTableWindow_8h_source.html  Events_8h_source.html  GraphWindow_8h_source.html  HandshakeDialog_8h_source.html  Interpolator_8h_source.html  LiveDataWindow_8h_source.html  MainFrame_8h_source.html  MappedReader_8h_source.html  ProjectConfigDialog_8h_source.html  ProjectPanel_8h_source.html  RawReader_8h_source.html  ReadingStrategy_8h_source.html  Run_8h_source.html  SensorConfigDialog_8h_source.html  SensorDatabase_8h_source.html  SensorManager_8h_source.html  SensorSelectionDialog_8h_source.html  Sensor_8h_source.html  SerialComm_8h.html  SerialComm_8h.js  SerialComm_8h_source.html  SessionController_8h_source.html  Sidebar_8h_source.html  Theme_8h_source.html  Toolbar_8h_source.html  VoltageReader_8h_source.html  annotated.html  annotated_dup.js  classAddSensorDialog-members.html  classAddSensorDialog.html  classApp-members.html  classApp.html  (+97 more)
Main_Project/doxygen_docs/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
Main_Project/doxygen_docs/latex/: AddSensorDialog_8h_source.tex  App_8h_source.tex  CalibrateSensorDialog_8h_source.tex  CalibrationPoint_8h_source.tex  CalibrationTableDialog_8h_source.tex  Calibrator_8h_source.tex  DataCollector_8h_source.tex  DataSession_8h_source.tex  DataTableWindow_8h_source.tex  Events_8h_source.tex  GraphWindow_8h_source.tex  HandshakeDialog_8h_source.tex  Interpolator_8h_source.tex  LiveDataWindow_8h_source.tex  MainFrame_8h_source.tex  MappedReader_8h_source.tex  ProjectConfigDialog_8h_source.tex  ProjectPanel_8h_source.tex  RawReader_8h_source.tex  ReadingStrategy_8h_source.tex  Run_8h_source.tex  SensorConfigDialog_8h_source.tex  SensorDatabase_8h_source.tex  SensorManager_8h_source.tex  SensorSelectionDialog_8h_source.tex  Sensor_8h_source.tex  SerialComm_8h.tex  SerialComm_8h_source.tex  SessionController_8h_source.tex  Sidebar_8h_source.tex  Theme_8h_source.tex  Toolbar_8h_source.tex  VoltageReader_8h_source.tex  annotated.tex  classAddSensorDialog.tex  classApp.tex  classCalibrateSensorDialog.tex  classCalibrationTableDialog.tex  classCalibrator.tex  classDataCollector.tex  (+30 more)
Main_Project/include/daq_capstone/: App.h
Main_Project/include/daq_capstone/controllers/: DataCollector.h  ExportManager.h  SessionController.h
Main_Project/include/daq_capstone/data/: DataSession.h  DataTableWindow.h  GraphWindow.h  LiveDataWindow.h  Run.h
Main_Project/include/daq_capstone/db/: DatabaseManager.h
Main_Project/include/daq_capstone/sensor/: CalibrationPoint.h  Calibrator.h  Interpolator.h  MappedReader.h  RawReader.h  ReadingStrategy.h  Sensor.h  SensorDatabase.h  SensorManager.h  VoltageReader.h
Main_Project/include/daq_capstone/serial/: SerialComm.h
Main_Project/include/daq_capstone/ui/: .Events.h.swp  AddSensorDialog.h  CalibrateSensorDialog.h  CalibrationCompareDialog.h  CalibrationRestorer.h  CalibrationTableDialog.h  Events.h  ExportManager.h  HandshakeDialog.h  HardwareConfirmDialog.h  LEDPanel.h  MainFrame.h  OpenProjectDialog.h  ProjectConfigDialog.h  ProjectPanel.h  SensorConfigDialog.h  SensorSelectionDialog.h  Sidebar.h  Theme.h  Toolbar.h
Main_Project/src/: App.cpp
Main_Project/src/controllers/: DataCollector.cpp  ExportManager.cpp  SessionController.cpp
Main_Project/src/data/: .GraphWindow.cpp.swp  DataSession.cpp  DataTableWindow.cpp  GraphWindow.cpp  LiveDataWindow.cpp  Run.cpp
Main_Project/src/db/: .DatabaseManager.cpp.swp  DatabaseManager.cpp
Main_Project/src/sensor/: Interpolator.cpp  MappedReader.cpp  RawReader.cpp  Sensor.cpp  SensorDatabase.cpp  SensorManager.cpp  VoltageReader.cpp
Main_Project/src/serial/: .SerialComm.cpp.swp  SerialComm.cpp
Main_Project/src/ui/: .CalibrationTableDialog.cpp.swp  .MainFrame.cpp.swp  .OpenProjectDialog.cpp.swp  .ProjectPanel.cpp.swp  .SensorConfigDialog.cpp.swp  .Toolbar.cpp.swp  AddSensorDialog.cpp  CalibrateSensorDialog.cpp  CalibrationCompareDialog.cpp  CalibrationRestorer.cpp  CalibrationTableDialog.cpp  Events.cpp  ExportManager.cpp  HandshakeDialog.cpp  HardwareConfirmDialog.cpp  LEDPanel.cpp  MainFrame.cpp  OpenProjectDialog.cpp  ProjectConfigDialog.cpp  ProjectPanel.cpp  SensorConfigDialog.cpp  SensorConfigDialog.cpp.save  SensorSelectionDialog.cpp  Sidebar.cpp  Toolbar.cpp
Project_Builds/Demo/: CMakeLists.txt
Project_Builds/Demo/include/daq_capstone/core/: SerialComm.h
Project_Builds/Demo/include/daq_capstone/ui/: HandshakeDialog.h  (+4 more)
Project_Builds/Demo/src/core/: SerialComm.cpp
Project_Builds/Demo/src/ui/: HandshakeDialog.cpp  LEDPanel.cpp  MainFrame.cpp  ProjectFrame.cpp
Project_Builds/v_1.0.1/: CMakeLists.txt
Project_Builds/v_1.0.1/src/data/: DataSession.cpp  DataTableWindow.cpp  LiveDataWindow.cpp
Project_Builds/v_1.0.1/src/sensor/: .Sensor.cpp.swp  Sensor.cpp
Project_Builds/v_1.0.1/src/serial/: SerialComm.cpp
Project_Builds/v_1.0.1/src/ui/: Events.cpp  MainFrame.cpp  ProjectPanel.cpp  Sidebar.cpp
(+33 files in other folders)
